# simpleRtsp

./: CMakeLists.txt  README.md
msocket/: CMakeLists.txt  msocket.c  msocket.h  mudp.c  mudp.h
mtcp/: CMakeLists.txt  msocket.c  msocket.h
ntp/: CMakeLists.txt  ntp.c  ntp.h  ntpcfg.c  ntpcfg.h
parsertsp/: CMakeLists.txt  parsertsp.c  parsertsp.h  replyrtsp.c  replyrtsp.h  rtspstruct.h
public/: CMakeLists.txt  list.h  public.c  public.h
register/: CMakeLists.txt  register.c  register.h
rtp/: CMakeLists.txt  parseh264.c  parseh264.h  rtp.c  rtp.h
src/: CMakeLists.txt  main.c
